# demo

./: .gitignore  .gitmodules  CMakeLists.txt  setup.sh
src/: main.cpp
src/game/: gameManager.cpp  gameManager.h
tests/: main.cpp
